# docs/openapi/swagger.json
@@ -1300,6 +1300,15 @@
               "format": "int32",
               "type": "integer"
             }
+          },
+          {
+            "in": "query",
+            "name": "sort",
+            "required": false,
+            "schema": {
+              "default": "desc",
+              "type": "string"
+            }
           }
         ],
         "responses": {
